# Fast-Nonlinear-Approximation-of-Pose-Graph-Node-Marginalization

./: CMakeLists.txt  build.sh
example/: test  test.cc
include/: Edge.h  Nam.h  Node.h  Topology.h
src/: Edge.cc  Nam.cc  Node.cc  Topology.cc
